--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mityaua/filmoteka"
+    "url": "git+https://github.com/angelo0730/filmoteka"
   },
   "keywords": [],
   "author": "Group 4",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mityaua/filmoteka/issues"
+    "url": "https://github.com/angelo0730/issues"
   },
-  "homepage": "https://github.com/mityaua/filmoteka",
+  "homepage": "https://github.com/angelo0730/filmoteka",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
